vmexamples/01-vmexamples-migration/03-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "3"
    image.openshift.io/triggers: |-
      [
        {
          "from": {
            "kind": "ImageStreamTag",
            "name": "linweb:latest",
            "namespace": "vmexamples"
          },
          "fieldPath": "spec.template.spec.containers[?(@.name==\"linweb\")].image",
          "paused": false
        }
      ]
  labels:
    app: linweb
  name: linweb
spec:
  replicas: 2
  progressDeadlineSeconds: 600
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: linweb
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 50%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: linweb
    spec:
      containers:
      - image: linweb:latest
        imagePullPolicy: Always
        name: linweb
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - name: php-fpm
          mountPath: /etc/php-fpm.d
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      terminationGracePeriodSeconds: 30
      volumes:
      - name: php-fpm
        configMap:
          name: php-fpm
          defaultMode: 420
